added content to most sections and finished conclusion

--- a/mymaster/essay.tex
+++ b/mymaster/essay.tex
@@ -28,28 +28,28 @@ Will we ever build a neural substrate able to contain our human consciousness?
 
 \tableofcontents{}
 
-\chapter{Introduction}\label{sect:intro}
+\section{Introduction}\label{sect:intro}
 \subfile{sections/introduction}
 
-\chapter{Evolutionary Algorithms}\label{sect:ea}
+\section{Evolutionary Algorithms}\label{sect:ea}
 \subfile{sections/evoalg}
 
-\chapter{Spiking Neural Networks}\label{sect:snn}
+\section{Spiking Neural Networks}\label{sect:snn}
 \subfile{sections/snn}
 
-\chapter{Neuromorphic Electronic Systems}\label{sect:neuromorphic}
+\section{Neuromorphic Electronic Systems}\label{sect:neuromorphic}
 \subfile{sections/neuromorphic2}
 
-\chapter{Autonomous Agents, Animats}\label{sect:agent}
+\section{Autonomous Agents, Animats}\label{sect:agent}
 \subfile{sections/agent}
 
-\chapter{Integrated Information Theory}\label{sect:iit}
+\section{Integrated Information Theory}\label{sect:iit}
 \subfile{sections/iit}
 
-\chapter{Related Works}
+\section{Related Works}
 \subfile{sections/albantakis}
 
-\chapter{Conclusion}
+\section{Conclusion}
 
 
 \printbibliography
