--- a/mymaster/references.bib
+++ b/mymaster/references.bib
@@ -2868,6 +2868,68 @@
 	author = {Davison, Andrew P. and Brüderle, Daniel and Eppler, Jochen M. and Kremkow, Jens and Muller, Eilif and Pecevski, Dejan and Perrinet, Laurent and Yger, Pierre},
 	urldate = {2020-02-16},
 	date = {2009},
-	keywords = {computational neuroscience, interoperability, large-scale models, Parallel Computing, python, reproducibility, simulation, translation},
+	keywords = {simulation, computational neuroscience, python, interoperability, large-scale models, Parallel Computing, reproducibility, translation},
 	file = {Full Text PDF:/home/danielsan/Zotero/storage/4LB8P5BW/Davison et al. - 2009 - PyNN a common interface for neuronal network simu.pdf:application/pdf}
+}
+
+@article{marshall_integrated_2016,
+	title = {Integrated Information and State Differentiation},
+	volume = {7},
+	issn = {1664-1078},
+	url = {https://www.frontiersin.org/articles/10.3389/fpsyg.2016.00926/full},
+	doi = {10.3389/fpsyg.2016.00926},
+	abstract = {Integrated information (Φ) is a measure of the cause-effect power of a physical system. This paper investigates the relationship between Φ as defined in Integrated Information Theory and state differentiation (D), the number of, and difference between potential system states. Here we provide theoretical justification of the relationship between Φ and D, then validate the results using a simulation study. First, we show that a physical system in a state with high Φ necessarily has many elements and specifies many causal relationships. Furthermore, if the average value of integrated information across all states is high, the system must also have high differentiation. Next, we explore the use of D as a proxy for Φ using artificial networks, evolved to have integrated structures. The results show a positive linear relationship between Φ and D for multiple network sizes and connectivity patterns. Finally we investigate the differentiation evoked by sensory inputs and show that, under certain conditions, it is possible to estimate integrated information without a direct perturbation of its internal elements. In concluding, we discuss the need for further validation on larger networks and explore the potential applications of this work to empirical studies of consciousness, especially concerning the practical estimation of integrated information from neuroimaging data.},
+	journaltitle = {Frontiers in Psychology},
+	shortjournal = {Front. Psychol.},
+	author = {Marshall, William and Gomez-Ramirez, Jaime and Tononi, Giulio},
+	urldate = {2020-02-17},
+	date = {2016},
+	keywords = {animats, cause-effect power, Consciousness, Integrated Information Theory, State differentiation},
+	file = {Full Text PDF:/home/danielsan/Zotero/storage/TE9CQVK6/Marshall et al. - 2016 - Integrated Information and State Differentiation.pdf:application/pdf}
+}
+
+@article{thakur_large-scale_2018,
+	title = {Large-Scale Neuromorphic Spiking Array Processors: A Quest to Mimic the Brain},
+	volume = {12},
+	issn = {1662-453X},
+	url = {https://www.frontiersin.org/articles/10.3389/fnins.2018.00891/full},
+	doi = {10.3389/fnins.2018.00891},
+	shorttitle = {Large-Scale Neuromorphic Spiking Array Processors},
+	abstract = {Neuromorphic engineering ({NE}) encompasses a diverse range of approaches to information processing that are inspired by neurobiological systems, and this feature distinguishes neuromorphic systems from conventional computing systems. The brain has evolved over billions of years to solve difficult engineering problems by using efficient, parallel, low-power computation. The goal of {NE} is to design systems capable of brain-like computation. Numerous large-scale neuromorphic projects have emerged recently. This interdisciplinary field was listed among the top 10 technology breakthroughs of 2014 by the {MIT} Technology Review and among the top 10 emerging technologies of 2015 by the World Economic Forum. {NE} has two-way goals: one, a scientific goal to understand the computational properties of biological neural systems by using models implemented in integrated circuits ({ICs}); second, an engineering goal to exploit the known properties of biological systems to design and implement efficient devices for engineering applications. Building hardware neural emulators can be extremely useful for simulating large-scale neural models to explain how intelligent behavior arises in the brain. The principle advantages of neuromorphic emulators are that they are highly energy efficient, parallel and distributed, and require a small silicon area. Thus, compared to conventional {CPUs}, these neuromorphic emulators are beneficial in many engineering applications such as for the porting of deep learning algorithms for various recognition tasks. In this review article, we describe some of the most significant neuromorphic spiking emulators, compare the different architectures and approaches used by them, illustrate their advantages and drawbacks, and highlight the capabilities that each can deliver to neural modelers. This article focuses on the discussion of large-scale emulators and is a continuation of a previous review of various neural and synapse circuits.},
+	journaltitle = {Frontiers in Neuroscience},
+	shortjournal = {Front. Neurosci.},
+	author = {Thakur, Chetan Singh and Molin, Jamal Lottier and Cauwenberghs, Gert and Indiveri, Giacomo and Kumar, Kundan and Qiao, Ning and Schemmel, Johannes and Wang, Runchun and Chicca, Elisabetta and Olson Hasler, Jennifer and Seo, Jae-sun and Yu, Shimeng and Cao, Yu and van Schaik, André and Etienne-Cummings, Ralph},
+	urldate = {2020-02-17},
+	date = {2018},
+	keywords = {analog subthreshold, brain-inspired computing, Large-scale systems, neuromorphic engineering, spiking neural emulator},
+	file = {Full Text PDF:/home/danielsan/Zotero/storage/XR5B6AJY/Thakur et al. - 2018 - Large-Scale Neuromorphic Spiking Array Processors.pdf:application/pdf}
+}
+
+@online{millner_development_2012,
+	title = {Development of a Multi-Compartment Neuron Model Emulation},
+	rights = {info:eu-repo/semantics/{openAccess}},
+	url = {https://archiv.ub.uni-heidelberg.de/volltextserver/13979/},
+	abstract = {This work describes the design of an analog circuit emulating a multi-compartment neuron model on a microchip. Initially, the single-compartment adaptive exponential integrate-and-fire neuron model is implemented as a hardware model. Therefor, the differential equations describing the model dynamics are directly translated into an electronic circuit based on operational transconductance amplifiers. Consequently a close correspondence between model and circuit is achieved enabling references to experiments done with computer simulators. 512 of these neurons are implemented on a single micro-chip. Individual control of each neuron’s biases is achieved by the use of analog floating-gate memory. In most cases, these biases directly correspondent to parameters of the model, hence simple translations are possible.
+The single neuron implementation has been verified on a prototype chip in several experiments. Inter alia, its capabilities of reproducing biological neuron’s behavior and the influence of fixed-pattern noise on the circuit are analyzed.
+To step over to a multi-compartment circuit, the neuron has been enhanced by a resistive element and a routing network to build complex dendrite structures. Furthermore, the parameterization allows compartments of different sizes covering large somatic and small dendritic compartments. A dedicated test chip has been designed for the verification of the new model. Several simulations show the enhanced behavior of the multi-compartment emulation including dendritic attenuation and active spike propagation.
+The neuron circuits are dedicated for a new kind of computer based on the cortex.},
+	type = {Dissertation},
+	author = {Millner, Sebastian},
+	urldate = {2020-02-17},
+	date = {2012-11},
+	doi = {DOI:10.11588/heidok.00013979},
+	file = {Full Text PDF:/home/danielsan/Zotero/storage/PHD6I733/Millner - 2012 - Development of a Multi-Compartment Neuron Model Em.pdf:application/pdf;Snapshot:/home/danielsan/Zotero/storage/V8FEPA8S/13979.html:text/html}
+}
+
+@incollection{millner_vlsi_2010-1,
+	title = {A {VLSI} Implementation of the Adaptive Exponential Integrate-and-Fire Neuron Model},
+	url = {http://papers.nips.cc/paper/3995-a-vlsi-implementation-of-the-adaptive-exponential-integrate-and-fire-neuron-model.pdf},
+	pages = {1642--1650},
+	booktitle = {Advances in Neural Information Processing Systems 23},
+	publisher = {Curran Associates, Inc.},
+	author = {Millner, Sebastian and Grübl, Andreas and Meier, Karlheinz and Schemmel, Johannes and Schwartz, Marc-olivier},
+	editor = {Lafferty, J. D. and Williams, C. K. I. and Shawe-Taylor, J. and Zemel, R. S. and Culotta, A.},
+	urldate = {2020-02-17},
+	date = {2010},
+	file = {NIPS Full Text PDF:/home/danielsan/Zotero/storage/TF8TDIVS/Millner et al. - 2010 - A VLSI Implementation of the Adaptive Exponential .pdf:application/pdf;NIPS Snapshot:/home/danielsan/Zotero/storage/9TT4QXZ2/3995-a-vlsi-implementation-of-the-adaptive-exponential-integrate-and-fire-neuron-model.html:text/html}
 }
