--- a/mymaster/sections/agent.tex
+++ b/mymaster/sections/agent.tex
@@ -9,7 +9,7 @@ The agents exhibit impressive performance, but they often lack in terms of gener
 The question remains whether the performance of artificially intelligent agents will continue to increase if we only continue to develop competence oriented agents. Further exploration of alternative methods may be appropriate.
 One such method is the artificial animal, the "animat," explored in detail by Stewart W. Wilson in 1985, and first proposed as the "child machine" by Alan Turing in 1950 \cite{wilson_animat_1991} \cite{turing_computing_2009}.
 
-\section{Animat}
+\subsection{Animat}
 The basics of the animat approach are to work upwards towards higher levels of intelligence.
 Essentially, there is a focus on the whole of the system, contrary to competence oriented modeling, which focuses on specific functions.
 The requirements are an environment that modeled after the problem side and an animat modeled after the solution side.   The animat needs to have a sufficient sensor/motor system to satisfy its own needs. It is put through an increasingly challenging environment, and the goal is to the minimum increase in animat complexity necessary to satisfy its own needs in the given environment.
