--- a/mymaster/sections/introduction.tex
+++ b/mymaster/sections/introduction.tex
@@ -36,3 +36,12 @@ Most systems today that can be considered intelligent are developed on tradition
 Using IIT to evaluate the intelligence of a computer program with autonomous functionality then seems to be useless.
 However, some neuromorphic systems, built to resemble neural architecture, have more integrated architecture.
 A program written for one of these systems might be considered conscious by IIT and might lead to new insights into the requirements for creating a system with a human level of intelligence.
+
+ADDITION?
+The initial motivation behind this project was the exploration of a neuromorphic system that might lead to new applications in robotics, artifical intelligence or brain-computer interface technology.
+When the cost of simulating the nervous system, which includes solving a massive amount of differential equations, can be reduced by several orders of magnitude, then a whole new world of possibilities could open:
+Dynamic models of robots could be included in the control loops of the simplest of robots.
+Maybe inherent characteristics in the neuromorphic system could be utilized to process complex signals, like EEG signals, with ease.
+Ultimately, maybe something equivalent to human consciousness could be stored in such a system that can emulate millions of neurons at a fraction of the cost of an ordinary computer.
+Nevertheless, these dreams are all hidden away in the far future.
+For now, the question remains what methods are most useful when it comes to training the physical neural network that the neuromorphic system, BrainScaleS, emulates.
