--- a/mymaster/sections/eh.tex
+++ b/mymaster/sections/eh.tex
@@ -31,7 +31,7 @@ Today, the NoC paradigm contain many successful neuromorphic architectures \cite
 Most are developed by and for researchers, but some are oriented towards commercial applications;
 Qualcomm, Intel and IBM are all developing their own neuromorphic systems \cite{meier_mixed-signal_2015}\cite{davies_loihi_2018}\cite{debole_truenorth_2019}\cite{trefzer_evolvable_2015}.
 
-\paragraph{High Input Count Analog Neural Network (HICANN)} \label{sect:hicann}
+\subsection{High Input Count Analog Neural Network (HICANN)} \label{sect:hicann}
 In this project, the analog NoC ASIC called HICANN is of particular interest\cite{schemmel_wafer-scale_2008} because of its analog implementation of neurons and synapses.
  The HICANN is a full custom featuring configurable neural network arrays.
 The neuron model implemented is based on a spiking neural network model and is realized using Op-Amps and capacitors.
