--- a/mymaster/sections/neuromorphic2.tex
+++ b/mymaster/sections/neuromorphic2.tex
@@ -70,8 +70,8 @@ A third mixed analog/digital system is BrainScaleS, which is the system of focus
 It has a wafer-scale analog architecture, which was also proposed by Mead \cite{mead_neuromorphic_1990} and works in a supertreshold mode because of the high rate of operation.
 \cite{schuman_survey_2017}
 
-\section{Evolutionary Hardware}\label{sect:eh}
+\subsection{Evolutionary Hardware}\label{sect:eh}
 \subfile{sections/eh}
 
-\section{BrainScaleS}\label{sect:bss}
+\subsection{BrainScaleS}\label{sect:bss}
 \subfile{sections/bss}
